--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Whendell Santos - Portfolio</title>
     <style>
         body, html {
-            height: 100%;
-            margin: 0;
             font-family: Arial, sans-serif;
             line-height: 1.6;
         }
@@ -50,11 +46,10 @@
         }
     </style>
 </head>
-
 <body>
+
     <div class="container">
         <header>
-            <h1>Your Name</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -64,10 +59,9 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
-            <p>
-                A brief paragraph about yourself, your background, skills, and experience.
-            </p>
+            <img src="pfp-image-modified.png" alt="Profile Pic of Whendell Tulabing Santos" class="profile-pic">
+            <p>Hello! I’m <strong>Whendell Tulabing Santos</strong>, an aspiring <i><strong>Software Engineer</strong></i> with a passion for problem-solving and a keen interest in technology. Currently, I’m focused on building a strong foundation in software development and exploring various programming languages, frameworks, and tools.</p>
+            <p>My goal is to become a proficient software engineer who can contribute to innovative projects and help solve real-world problems. I am particularly interested in <i><strong>Web Development</strong></i>, <i><strong>Mobile Application Development</strong></i>, and <i><strong>Artificial Intelligence</strong></i>. I aim to further develop my skills in these areas.</p>
         </section>
 
         <section id="projects">
@@ -80,16 +74,18 @@
         </section>
 
         <section id="contact">
-            <h2>Contact</h2>
+            <h2>Pleaser Contact me:</h2>
+            <p>I believe that collaboration and knowledge-sharing are vital in the tech industry. I’m excited to connect with fellow developers, mentors, and enthusiasts. Feel free to reach out to me</p>
             <p>
-                How to reach you: Email, LinkedIn, GitHub, etc.
+                <i><a href="mailto:seyyy.js@gmail.com" target="_blank">seyyy.js@gmail.com</a></i>
             </p>
+
         </section>
 
         <footer>
-            <p>© 2023 by Your Name</p>
+            <p>&copy; <a href="https://www.facebook.com/whendellsantos.01/" target="_blank">Whendell</a> 2024</p>
         </footer>
+
     </div>
 </body>
-
 </html>
