--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <section id="about">
-            <h2>About M</h2>
+            <h2>About Me</h2>
             <img src="pfp-image-modified.png" alt="Profile Pic of Whendell Tulabing Santos" class="profile-pic">
             <p>Hello! I’m <strong>Whendell Tulabing Santos</strong>, an aspiring <i><strong>Software Engineer</strong></i> with a passion for problem-solving and a keen interest in technology. Currently, I’m focused on building a strong foundation in software development and exploring various programming languages, frameworks, and tools.</p>
             <p>My goal is to become a proficient software engineer who can contribute to innovative projects and help solve real-world problems. I am particularly interested in <i><strong>Web Development</strong></i>, <i><strong>Mobile Application Development</strong></i>, and <i><strong>Artificial Intelligence</strong></i>. I aim to further develop my skills in these areas.</p>
